[package]
name = "pewpew"
version = "0.5.12"
edition = "2018"
default-run = "pewpew"
publish = false
license = "Apache 2.0"

[lib]
doctest = false

[[bin]]
name = "pewpew"
path = "src/bin/pewpew.rs"

[[bin]]
name = "test-server"
path = "src/bin/test_server.rs"

[dependencies]
atty = "0.2"
base64 = "0.21"
body_reader = { path = "./lib/body_reader" }
bytes = "1"
channel = { path = "./lib/channel" }
clap = { version = "4", features = ["derive", "cargo", "std", "help", "usage", "error-context", "wrap_help"], default-features = false }
config = { path = "./lib/config" }
csv = "1"
ctrlc = "3"
chrono = "0.4"
ether = { path = "./lib/either" }
for_each_parallel = { path = "./lib/for_each_parallel" }
futures = "0.3"
futures-timer = "3"
hdrhistogram = "7"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2", "stream"] }
hyper-tls = "0.5"
itertools = "0.10"
mod_interval = { path = "./lib/mod_interval" }
native-tls = "0.2"
once_cell = "1.17.1"
rand = "0.8"
regex = "1"
select_any = { path = "./lib/select_any" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
test_common = { path = "./lib/test_common" }
tokio = "1"
tokio-stream = { version = "0.1", features = ["sync", "time"] }
url = "2"
yansi = "0.5"
zip_all = { path = "./lib/zip_all" }
# https://github.com/softprops/json-env-logger/issues/6
log = { version = "0.4", features = ["kv_unstable_std"] }
env_logger = "0.10"
json_env_logger = { version = "0.1", features = ["iso-timestamps"] }
# https://github.com/sfackler/rust-openssl/issues/1021#issuecomment-605602642
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
futures-timer = "3"
maplit = "1"
tempfile = "3"

[profile.release]
panic = "abort"
lto = "fat"

[profile.release.package.config-wasm]
opt-level = 's'

[profile.release.package.hdr-histogram-wasm]
opt-level = 's'

[workspace]
members = [
    "lib/body_reader",
    "lib/channel",
    "lib/config",
    "lib/config-wasm",
    "lib/either",
    "lib/hdr-histogram-wasm",
    "lib/for_each_parallel",
    "lib/mod_interval",
    "lib/select_any",
    "lib/test_common",
    "lib/zip_all",
]
