[package]
name = "channel"
version = "0.0.0"
edition = "2018"
publish = false
license = "Apache 2.0"

[lib]
doctest = false

[dependencies]
ahash = "0.8"
concurrent-queue = "2"
dashmap = "5"
event-listener = "2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4"
