[package]
name = "channel"
version.workspace = true
edition = "2018"
publish = false
license.workspace = true

[lib]
doctest = false

[dependencies]
ahash = "0.8"
concurrent-queue = "2"
dashmap = "5"
event-listener = "2"
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log.workspace = true
