[package]
name = "config-gen"
version = "0.0.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
config = { path = "../config" }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
serde = "1"
serde_json = "1.0.104"
serde-wasm-bindgen = "0.5.0"
serde_yaml = "0.9.25"
wasm-bindgen = "0.2.87"
# enable required feature of transitive dependency
getrandom = { version = "*", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
debug = true
