[package]
name = "config-gen"
version.workspace = true
edition = "2021"
publish = false
license.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
config = { path = "../config" }
console_error_panic_hook = "0.1.7"
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
wasm-bindgen.workspace = true
getrandom.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
debug = true
