[package]
name = "config-wasm"
version = "0.0.0"
edition = "2018"
publish = false
license = "Apache 2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
config = { path = "../config" }
js-sys = "0.3"
serde = "1"
serde-wasm-bindgen = "0.6"
# https://github.com/tkaitchuck/aHash/issues/95#issuecomment-1937448134
# https://github.com/rustwasm/wasm-bindgen/pull/3031#issuecomment-1442610289
wasm-bindgen = { version = "0.2" }
# https://docs.rs/getrandom/0.3.3/getrandom/#webassembly-support
# See the root .cargo/config.toml for the `getrandom_backend` cfg flag.
getrandom = { version = "0.3", features = ["wasm_js"] }
log = "0.4"
wasm-logger = "0.2"
