[package]
name = "config-wasm"
version.workspace = true
edition = "2018"
publish = false
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
config = { workspace = true, features = ["legacy"]  }
js-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen = "0.6"
# https://github.com/tkaitchuck/aHash/issues/95#issuecomment-1937448134
# https://github.com/rustwasm/wasm-bindgen/pull/3031#issuecomment-1442610289
wasm-bindgen = { workspace = true }
# https://docs.rs/getrandom/0.3.3/getrandom/#webassembly-support
# See the root .cargo/config.toml for the `getrandom_backend` cfg flag.
getrandom = { workspace = true, features = ["wasm_js"] }
log.workspace = true
wasm-logger.workspace = true
