[package]
name = "config"
version.workspace = true
edition = "2018"
publish = false
license.workspace = true

[dependencies]
base64.workspace = true
boa_engine = "0.16.0"
derivative = "2.2.0"
derive_more = "0.99.17"
diplomatic-bag = "0.3.1"
ether.workspace = true
futures.workspace = true
gc = "0.4.1"
http.workspace = true
itertools.workspace = true
js-sys.workspace = true
jsonpath_lib = "0.3.0"
log.workspace = true
nom = "7.1.3"
once_cell.workspace = true
percent-encoding = "2"
pest = { version = "2", optional = true }
pest_derive = { version = "2", optional = true }
phf = { version = "0.11", features = ["macros"] }
rand.workspace = true
regex.workspace = true
scripting-macros = { path = "../scripting-macros" }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
serde-tuple-vec-map = "1.0.1"
serde_yaml.workspace = true
thiserror.workspace = true
unicode-segmentation = "1"
yaml-rust = { version = "0.4", optional = true }
zip_all.workspace = true

[dev-dependencies]
maplit = "1"
test_common = { path = "../test_common" }
tokio.workspace = true

[features]
convert = ["legacy"]
legacy = ["dep:yaml-rust", "dep:pest", "dep:pest_derive"]
