[package]
name = "config"
version = "0.0.0"
edition = "2018"
publish = false
license = "Apache 2.0"

[lib]
doctest = false

[dependencies]
base64 = "0.22"
ether = { path = "../either" }
futures = "0.3"
http = "1"
itertools = "0.14"
jsonpath_lib = "0.3.0"
percent-encoding = "2"
pest = "2"
pest_derive = "2"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1"
yaml-rust2 = "0.10"
zip_all = { path = "../zip_all" }
js-sys = "0.3"
log = "0.4"

[dev-dependencies]
maplit = "1"
test_common = { path = "../test_common" }
tokio = "1"
