[package]
name = "config"
version.workspace = true
edition = "2018"
publish = false
license.workspace = true

[dependencies]
base64.workspace = true
boa_engine = "0.20"
boa_gc = "0.20"
boa_parser = "0.20"
derivative = "2.2.0"
derive_more = { version = "2", features = ["deref", "deref_mut", "from", "from_str"] }
diplomatic-bag = "0.3.1"
ether.workspace = true
futures.workspace = true
# boa_engine is is pulling in 0.2
# Not a direct dependency but get random as of 0.2.2 throws an error on "unsupported targets"
# https://docs.rs/getrandom/0.2.2/getrandom/#unsupported-targets
# The fix is to add it as a supported target and specify the target. As of 0.2.2 both browser and nodejs use "js"
getrandom = { version = "0.2", features = ["js"] }
# gc = "0.4.1"
http.workspace = true
itertools.workspace = true
js-sys.workspace = true
jsonpath_lib = "0.3.0"
log.workspace = true
nom = "7.1.3"
once_cell.workspace = true
percent-encoding = "2"
pest = { version = "2", optional = true }
pest_derive = { version = "2", optional = true }
phf = { version = "0.11", features = ["macros"] }
rand.workspace = true
regex.workspace = true
scripting-macros = { path = "../scripting-macros" }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
serde-tuple-vec-map = "1.0.1"
serde_yaml.workspace = true
thiserror.workspace = true
unicode-segmentation = "1"
yaml-rust2 = { version = "0.10", optional = true }
zip_all.workspace = true

[dev-dependencies]
maplit = "1"
test_common = { path = "../test_common" }
tokio.workspace = true

[features]
convert = ["legacy"]
legacy = ["dep:yaml-rust2", "dep:pest", "dep:pest_derive"]
