[package]
name = "config-wasm"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
config = { path = "../config" }
js-sys = "0.3"
serde = "1"
serde-wasm-bindgen = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }

[profile.release]
lto = true
opt-level = 's'