[package]
name = "hdr-histogram-wasm"
version = "0.0.0"
edition = "2018"
publish = false
license = "Apache 2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13"
hdrhistogram = "7"
wasm-bindgen = "0.2"
log = "0.4"
wasm-logger = "0.2"

# https://github.com/rustwasm/wasm-pack/issues/864
# https://github.com/rustwasm/wasm-pack/issues/886
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
