[package]
name = "test_common"
version.workspace = true
edition = "2018"
publish = false
license.workspace = true

[lib]
doctest = false
path = "test_common.rs"

[dependencies]
futures.workspace = true
futures-timer.workspace = true
hyper = { workspace = true, features = ["server"] }
http.workspace = true
parking_lot = "0.12"
tokio = { workspace = true, features = ["full"] }
url.workspace = true
log.workspace = true
