[package]
name = "test_common"
version = "0.1.0"
edition = "2018"
publish = false
license = "Apache 2.0"

[lib]
doctest = false
path = "test_common.rs"

[dependencies]
bytes = "1"
futures = "0.3"
futures-timer = "3"
hyper = { version = "1.4", features = ["http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
http = "1.1"
http-body-util = "0.1"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
url = "2"
log = "0.4"
